reduced the ClassicProblem_01_DiningPhilosophers to the resource hierarchy solution